--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -7,5 +7,14 @@
 		<%= f.text_field :title %>
 	</p>
 
+	<p>
+		<!-- Title<br> -->
+		<%= f.label :text %><br>
+		<%= f.text_area :text %>
+	</p>
+
+	<p>
+		<%= f.submit %>
+	</p>
 
 <% end %>
