--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,1 +1,20 @@
 <h1>Contact us</h1>
+
+<%= form_for :contact, url: contacts_path do |f| %>
+	<p>
+		<!-- Title<br> -->
+		<%= f.label :email %><br>
+		<%= f.text_field :email %>
+	</p>
+
+	<p>
+		<!-- Title<br> -->
+		<%= f.label :message %><br>
+		<%= f.text_area :message %>
+	</p>
+
+	<p>
+		<%= f.submit 'Send message' %>
+	</p>
+
+<% end %>
