Change css styles for validation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,10 +14,7 @@
  *= require_self
  */
 
-.field_with_errors input {
-	border-color: red;
-}
-
+.field_with_errors input,
 .field_with_errors textarea {
 	border-color: red;
 }
