--- a/app/views/articles/create.html.erb
+++ b/app/views/articles/create.html.erb
@@ -1,2 +1,9 @@
 <h1>Thank you!</h1>
 <p>Article has been created!</p>
+
+<!-- Ссылка для просмотра всех статей блога - выполняется POST запрос -->
+<!-- данные которые отпавляются POST запросом подразумевает, что что-то будет создаваться, обновляться -->
+<!-- открывается в новом окне - url получаем с помощью GET запрос, только получает данные с сервера -->
+<!-- <a href="/articles">Show all articles</a> -->
+
+<%= link_to 'Show all articles', articles_path %>
