--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,8 +6,10 @@
 	<p><%= article.text %></p>
 
 	 <!-- Добавим ссылку на пост -->
-	<p><%= link_to  "Show article", article_path(article) %> | 
-		<%= link_to  "Edit article", edit_article_path(article) %></p>
+	<p><%= link_to  "Show", article_path(article) %> | 
+	  	<%= link_to  "Edit", edit_article_path(article) %> |
+		<%= link_to  "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %>
+	</p>
  	<hr>
 
 
