--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -2,3 +2,25 @@
 <p>
 	<%= @article.text %>
 </p>
+
+<p>
+	<%= form_for([@article, @article.comments.build]) do |f| %>
+		<p>
+			<!-- Title<br> -->
+			<%= f.label :author %><br>
+			<%= f.text_field :author %>
+		</p>
+
+		<p>
+			<!-- Title<br> -->
+			<%= f.label :body %><br>
+			<%= f.text_area :body %>
+		</p>
+
+		<p>
+			<%= f.submit %>
+		</p>
+
+	<% end %>
+
+</p>
