--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,24 +3,28 @@
 	<%= @article.text %>
 </p>
 
+<h2>Comments</h2>
+
+<% @article.comments.each do |comment| %>
+	<p>
+		<i><%= comment.author %> said: </i>
+		<%= comment.body %>
+	</p>
+<% end %>
+
+<h2>Add comment</h2>
 <p>
 	<%= form_for([@article, @article.comments.build]) do |f| %>
 		<p>
-			<!-- Title<br> -->
 			<%= f.label :author %><br>
 			<%= f.text_field :author %>
 		</p>
 
 		<p>
-			<!-- Title<br> -->
 			<%= f.label :body %><br>
 			<%= f.text_area :body %>
 		</p>
 
-		<p>
-			<%= f.submit %>
-		</p>
-
+		<p><%= f.submit %></p>
 	<% end %>
-
 </p>
