Show comments on article page

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -7,7 +7,7 @@
 
 <% @article.comments.each do |comment| %>
 	<p>
-		<i><%= comment.author %> said: </i>
+		<i><%= comment.author %> said: </i><br>
 		<%= comment.body %>
 	</p>
 <% end %>
