--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,10 +10,10 @@
   </head>
   <body>
     <!-- укзываем helper (а не url), где хранится path для входа и выхода -->
-
+    <!-- current_user.inspect - так ка это объект -->
     <% if user_signed_in? %>
 
-      <%= link_to 'Sign_out', destroy_user_session_path, method: :delete %>
+      Hello <%= current_user.email %> | <%= link_to 'Sign_out', destroy_user_session_path, method: :delete %>
 
     <% else %>
 
