Add username column to users table

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <!-- current_user.inspect - так ка это объект -->
     <% if user_signed_in? %>
 
-      Hello <%= current_user.email %> | <%= link_to 'Sign_out', destroy_user_session_path, method: :delete %>
+      Hello, <%= current_user.email %> | <%= link_to 'Sign_out', destroy_user_session_path, method: :delete %>
 
     <% else %>
 
